desktop version - trend section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,68 @@
     </div>
 </header>
 
+<section class="trend">
+    <h3 class="trend_title">Сейчас в тренде</h3>
+    <div class="trend_container">
+        <div class="trend_container-item trend_garden">
+            <div class="trend_container-item-content">
+
+                <div class="trend_links">
+                    <a href=#0>lifestyle</a>
+                    <a href=#0>interior</a>
+                </div>
+
+                <p>
+                    Сейчас в тренде: сад
+                    на подоконнике
+                </p>
+            </div>
+        </div>
+        <div class="trend_container-item trend_cheeses">
+            <div class="trend_container-item-content">
+
+                <div class="trend_links">
+                    <a href=#0>lifestyle</a>
+                    <a href=#0>interior</a>
+                </div>
+
+                <p>
+                    сыры на красивых
+                    картинках из интернета:
+                    какие они на вкус?
+                </p>
+            </div>
+        </div>
+        <div class="trend_container-item trend_mountains">
+            <div class="trend_container-item-content">
+
+                <div class="trend_links">
+                    <a href=#0>lifestyle</a>
+                    <a href=#0>interior</a>
+                </div>
+
+                <p>
+                    собираемся в первый
+                    поход в горы
+                </p>
+            </div>
+        </div>
+        <div class="trend_container-item trend_lemons">
+            <div class="trend_container-item-content">
+
+                <div class="trend_links">
+                    <a href=#0>lifestyle</a>
+                    <a href=#0>interior</a>
+                </div>
+
+                <p>
+                    сейчас в тренде: сколько
+                    витамина c в лимонах?
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <div class="main">
     <div class="wrapper wrapper-main">
@@ -52,7 +114,8 @@
 
             <article class="news">
                 <div class="news_image">
-                    <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post1.jpg" alt="рассвет">
+                    <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post1.jpg"
+                         alt="рассвет">
                 </div>
                 <div class="news_text">
 
