desktop version - products

--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
                 </div>
             </article>
 
+
         </main>
 
         <aside class="aside-bar">
@@ -490,6 +491,87 @@
             </section>
         </aside>
     </div>
+    <section class="wrapper products">
+        <h3 class="products_title">Сейчас в тренде</h3>
+        <div class="products_container">
+            <div class="products_container-item products_spot">
+                <div class="products_container-item-content">
+
+                    <h3 class="products_container-item-content-title">
+                        Подушки на диван
+                    </h3>
+
+                    <p class="products_container-item-content-text">
+                        Набор из двух подушек с модными принтами. Видео о создании <a href="#">здесь</a>.
+                    </p>
+                    <div class="products_container-item-content-shop">
+                        <div class="products_container-item-content-shop-price">
+                            <p class="products_container-item-content-shop-price-now">
+                                800 ₽
+                            </p>
+                            <p class="products_container-item-content-shop-price-before">
+                                1000 ₽
+                            </p>
+                        </div>
+                        <button class="products_container-item-content-shop-button" type="submit">
+                            <span class="products_container-item-content-shop-button-hint">в магазин</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="products_container-item products_doll">
+                <div class="products_container-item-content">
+
+                    <h3 class="products_container-item-content-title">
+                        Подушки на диван
+                    </h3>
+
+                    <p class="products_container-item-content-text">
+                        Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a href="#">весенняя серия постов</a> в блоге
+                        и несколько подкастов. </p>
+                    <div class="products_container-item-content-shop">
+                        <div class="products_container-item-content-shop-price">
+                            <p class="products_container-item-content-shop-price-now">
+                                800 ₽
+                            </p>
+                            <p class="products_container-item-content-shop-price-before">
+                                1000 ₽
+                            </p>
+                        </div>
+                        <button class="products_container-item-content-shop-button" type="submit">
+                            <span class="products_container-item-content-shop-button-hint">в магазин</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="products_container-item products_frame">
+                <div class="products_container-item-content">
+
+                    <h3 class="products_container-item-content-title">
+                        Подушки на диван
+                    </h3>
+
+                    <p class="products_container-item-content-text">
+                        Необычная рамка для украшения дома из видео <a href="#">«Как сделать рамку из подручных средств за 30
+                        минут»</a>
+                    </p>
+                    <div class="products_container-item-content-shop">
+                        <div class="products_container-item-content-shop-price">
+                            <p class="products_container-item-content-shop-price-now">
+                                800 ₽
+                            </p>
+                            <p class="products_container-item-content-shop-price-before">
+                                1000 ₽
+                            </p>
+                        </div>
+                        <button class="products_container-item-content-shop-button" type="submit">
+                            <span class="products_container-item-content-shop-button-hint">в магазин</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 
 <footer class="footer">
