desktop version - popup

--- a/index.html
+++ b/index.html
@@ -492,80 +492,80 @@
         </aside>
     </div>
     <section class="wrapper products">
-        <h3 class="products_title">Сейчас в тренде</h3>
-        <div class="products_container">
-            <div class="products_container-item products_spot">
-                <div class="products_container-item-content">
+        <h3 class="shop_title">Сейчас в тренде</h3>
+        <div class="shop_container">
+            <div class="shop_container-item shop_spot">
+                <div class="shop_container-item-content">
 
-                    <h3 class="products_container-item-content-title">
+                    <h3 class="shop_container-item-content-title">
                         Подушки на диван
                     </h3>
 
-                    <p class="products_container-item-content-text">
+                    <p class="shop_container-item-content-text">
                         Набор из двух подушек с модными принтами. Видео о создании <a href="#">здесь</a>.
                     </p>
-                    <div class="products_container-item-content-shop">
-                        <div class="products_container-item-content-shop-price">
-                            <p class="products_container-item-content-shop-price-now">
+                    <div class="shop_container-item-content-shop">
+                        <div class="shop_container-item-content-shop-price">
+                            <p class="shop_container-item-content-shop-price-now">
                                 800 ₽
                             </p>
-                            <p class="products_container-item-content-shop-price-before">
+                            <p class="shop_container-item-content-shop-price-before">
                                 1000 ₽
                             </p>
                         </div>
-                        <button class="products_container-item-content-shop-button" type="submit">
-                            <span class="products_container-item-content-shop-button-hint">в магазин</span>
+                        <button class="shop_container-item-content-shop-button" type="submit">
+                            <span class="shop_container-item-content-shop-button-hint">в магазин</span>
                         </button>
                     </div>
                 </div>
             </div>
-            <div class="products_container-item products_doll">
-                <div class="products_container-item-content">
+            <div class="shop_container-item shop_doll">
+                <div class="shop_container-item-content">
 
-                    <h3 class="products_container-item-content-title">
+                    <h3 class="shop_container-item-content-title">
                         Подушки на диван
                     </h3>
 
-                    <p class="products_container-item-content-text">
+                    <p class="shop_container-item-content-text">
                         Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a href="#">весенняя серия постов</a> в блоге
                         и несколько подкастов. </p>
-                    <div class="products_container-item-content-shop">
-                        <div class="products_container-item-content-shop-price">
-                            <p class="products_container-item-content-shop-price-now">
+                    <div class="shop_container-item-content-shop">
+                        <div class="shop_container-item-content-shop-price">
+                            <p class="shop_container-item-content-shop-price-now">
                                 800 ₽
                             </p>
-                            <p class="products_container-item-content-shop-price-before">
+                            <p class="shop_container-item-content-shop-price-before">
                                 1000 ₽
                             </p>
                         </div>
-                        <button class="products_container-item-content-shop-button" type="submit">
-                            <span class="products_container-item-content-shop-button-hint">в магазин</span>
+                        <button class="shop_container-item-content-shop-button" type="submit">
+                            <span class="shop_container-item-content-shop-button-hint">в магазин</span>
                         </button>
                     </div>
                 </div>
             </div>
-            <div class="products_container-item products_frame">
-                <div class="products_container-item-content">
+            <div class="shop_container-item shop_frame">
+                <div class="shop_container-item-content">
 
-                    <h3 class="products_container-item-content-title">
+                    <h3 class="shop_container-item-content-title">
                         Подушки на диван
                     </h3>
 
-                    <p class="products_container-item-content-text">
+                    <p class="shop_container-item-content-text">
                         Необычная рамка для украшения дома из видео <a href="#">«Как сделать рамку из подручных средств за 30
                         минут»</a>
                     </p>
-                    <div class="products_container-item-content-shop">
-                        <div class="products_container-item-content-shop-price">
-                            <p class="products_container-item-content-shop-price-now">
+                    <div class="shop_container-item-content-shop">
+                        <div class="shop_container-item-content-shop-price">
+                            <p class="shop_container-item-content-shop-price-now">
                                 800 ₽
                             </p>
-                            <p class="products_container-item-content-shop-price-before">
+                            <p class="shop_container-item-content-shop-price-before">
                                 1000 ₽
                             </p>
                         </div>
-                        <button class="products_container-item-content-shop-button" type="submit">
-                            <span class="products_container-item-content-shop-button-hint">в магазин</span>
+                        <button class="shop_container-item-content-shop-button" type="submit">
+                            <span class="shop_container-item-content-shop-button-hint">в магазин</span>
                         </button>
                     </div>
                 </div>
@@ -597,5 +597,41 @@
         </p>
     </div>
 </footer>
+<div class="popup">
+    <form class="popup_form">
+        <h3 class="popup_title">Ваш фидбек</h3>
+        <div class="popup_form-row">
+            <label class="popup_form-group">
+                <span class="popup_form-hint">Как часто вы заходите на сайт?</span>
+                <select class="popup_form-select">
+                    <option value="Пчти каждый день" selected="">Почти каждый день</option>
+                    <option value="Раз в несколько дней">Раз в несколько дней</option>
+                    <option value="Раз в несколько недель">Раз в несколько недель</option>
+                    <option value="Несколько раз в год">Несколько раз в год</option>
+                </select>
+            </label>
+        </div>
+        <div class="popup_form-row">
+            <span class="popup_form-hint">Вы подписаны на e-mail рассылку?</span>
+            <label class="popup_radio-group">
+                <input type="radio" class="popup_radio" name="radio-group" checked>
+                <span class="popup_radio-group-text">Да </span>
+            </label>
+            <label class="popup_radio-group">
+                <input type="radio" class="popup_radio" name="radio-group">
+                <span class="popup_radio-group-text">Нет</span>
+            </label>
+        </div>
+        <div class="popup_form-row">
+            <span class="popup_form-hint">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</span>
+            <label class="popup_form-group">
+                <textarea class="popup_textarea" placeholder="Может больше рецептов?"></textarea>
+            </label>
+        </div>
+        <div class="popup_form-row">
+            <button class="popup_button">Отправить</button>
+        </div>
+    </form>
+</div>
 </body>
 </html>
