--- a/index.html
+++ b/index.html
@@ -60,57 +60,78 @@
         <div class="trend_container-item trend_garden">
             <div class="trend_container-item-content">
 
-                <div class="trend_links">
-                    <a href=#0>lifestyle</a>
-                    <a href=#0>interior</a>
-                </div>
+                <ul class="trend_links">
+                    <li>
+                        <a href=#0>lifestyle</a>
+                    </li>
+                    <li>
+                        <a href=#0>interior</a>
+                    </li>
+                </ul>
 
-                <p>
-                    Сейчас в тренде: сад
-                    на подоконнике
+                <p class="trend_container-item-paragraph">
+                    <a href="#"> Сейчас в тренде: сад
+                        на подоконнике </a>
                 </p>
             </div>
         </div>
         <div class="trend_container-item trend_cheeses">
             <div class="trend_container-item-content">
 
-                <div class="trend_links">
-                    <a href=#0>lifestyle</a>
-                    <a href=#0>interior</a>
-                </div>
+                <ul class="trend_links">
+                    <li>
+                        <a href=#0>lifestyle</a>
+                    </li>
+                    <li>
+                        <a href=#0>interior</a>
+                    </li>
+                </ul>
 
-                <p>
-                    сыры на красивых
-                    картинках из интернета:
-                    какие они на вкус?
+                <p class="trend_container-item-paragraph">
+                    <a href="#">
+                        сыры на красивых
+                        картинках из интернета:
+                        какие они на вкус?
+                    </a>
                 </p>
             </div>
         </div>
         <div class="trend_container-item trend_mountains">
             <div class="trend_container-item-content">
 
-                <div class="trend_links">
-                    <a href=#0>lifestyle</a>
-                    <a href=#0>interior</a>
-                </div>
-
-                <p>
-                    собираемся в первый
-                    поход в горы
+                <ul class="trend_links">
+                    <li>
+                        <a href=#0>lifestyle</a>
+                    </li>
+                    <li>
+                        <a href=#0>interior</a>
+                    </li>
+                </ul>
+                <p class="trend_container-item-paragraph">
+                    <a href="#">
+                        собираемся в первый
+                        поход в горы
+                    </a>
                 </p>
             </div>
         </div>
         <div class="trend_container-item trend_lemons">
             <div class="trend_container-item-content">
 
-                <div class="trend_links">
-                    <a href=#0>lifestyle</a>
-                    <a href=#0>interior</a>
-                </div>
+                <ul class="trend_links">
+                    <li>
+                        <a href=#0>lifestyle</a>
+                    </li>
+                    <li>
+                        <a href=#0>interior</a>
+                    </li>
+                </ul>
 
-                <p>
-                    сейчас в тренде: сколько
-                    витамина c в лимонах?
+                <p class="trend_container-item-paragraph">
+                    <a href="#">
+                        сейчас в тренде: сколько
+                        витамина c в лимонах?
+                    </a>
                 </p>
             </div>
         </div>
@@ -472,7 +493,14 @@
     <section class="wrapper products">
         <h3 class="shop_title">Сейчас в тренде</h3>
         <div class="shop_container">
-            <div class="shop_container-item shop_spot">
+            <div class="shop_container-item">
+                <picture>
+                    <source srcset="images/shop-item-mobile1.jpg" media="(max-width: 641px)">
+                    <source srcset="images/shop-item-tablet1.jpg" media="(max-width: 1200px)">
+                    <source srcset="images/shop-item-tablet1.jpg" media="(max-width: 1200px) and (orientation: portrait)">
+
+                    <img src="images/shop-item-desk1.jpg" alt="desk">
+                </picture>
                 <div class="shop_container-item-content">
 
                     <h3 class="shop_container-item-content-title">
@@ -497,15 +525,23 @@
                     </div>
                 </div>
             </div>
-            <div class="shop_container-item shop_doll">
+            <div class="shop_container-item">
+                <picture>
+                    <source srcset="images/shop-item-mobile2.jpg" media="(max-width: 641px)">
+                    <source srcset="images/shop-item-tablet2.jpg" media="(max-width: 1200px)">
+                    <source srcset="images/shop-item-tablet2.jpg" media="(max-width: 1200px) and (orientation: portrait)">
+
+                    <img src="images/shop-item-desk2.jpg" alt="desk2">
+                </picture>
                 <div class="shop_container-item-content">
 
                     <h3 class="shop_container-item-content-title">
-                        Подушки на диван
+                        Кукла «Зайчик»
                     </h3>
 
                     <p class="shop_container-item-content-text">
-                        Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a href="#">весенняя серия постов</a> в блоге
+                        Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a href="#">весенняя серия
+                        постов</a> в блоге
                         и несколько подкастов. </p>
                     <div class="shop_container-item-content-shop">
                         <div class="shop_container-item-content-shop-price">
@@ -522,15 +558,23 @@
                     </div>
                 </div>
             </div>
-            <div class="shop_container-item shop_frame">
+            <div class="shop_container-item">
+                <picture>
+                    <source srcset="images/shop-item-mobile3.jpg" media="(max-width: 641px)">
+                    <source srcset="images/shop-item-tablet3.jpg" media="(max-width: 1200px)">
+                    <source srcset="images/shop-item-tablet3.jpg" media="(max-width: 1200px) and (orientation: portrait)">
+
+                    <img src="images/shop-item-desk3.jpg" alt="desk3">
+                </picture>
                 <div class="shop_container-item-content">
 
                     <h3 class="shop_container-item-content-title">
-                        Подушки на диван
+                        Шестиугольная рамка
                     </h3>
 
                     <p class="shop_container-item-content-text">
-                        Необычная рамка для украшения дома из видео <a href="#">«Как сделать рамку из подручных средств за 30
+                        Необычная рамка для украшения дома из видео <a href="#">«Как сделать рамку из подручных средств
+                        за 30
                         минут»</a>
                     </p>
                     <div class="shop_container-item-content-shop">
@@ -583,8 +627,9 @@
         </p>
     </div>
 </footer>
-<div class="popup _hidden">
+<div class="popup ">
     <form class="popup_form">
+        <button class="close_popup"></button>
         <h3 class="popup_title">Ваш фидбек</h3>
         <div class="popup_form-row">
             <label class="popup_form-group">
