--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
         </p>
     </div>
 </footer>
-<div class="popup ">
+<div class="popup _hidden">
     <form class="popup_form">
         <button class="close_popup"></button>
         <h3 class="popup_title">Ваш фидбек</h3>
